--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-# Compiled class file
 *.class
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
+# Config Files
+.classpath
+*.MF
+*.project
+.settings
+.tern-project
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -14,9 +14,14 @@
 *.jar
 *.war
 *.ear
-*.zip
-*.tar.gz
-*.rar
+
+target/
+*.iml
+auditlog/
+.idea/
+.DS_Store
+tmp.*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
