--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>club.hacloud</groupId>
     <artifactId>jersey-starter-swagger</artifactId>
-    <version>1.0.0.RELEASE</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <name>jersey-starter-swagger</name>
     <url>http://git.oschina.net/keets/jersey-starter-swagger</url>
@@ -28,8 +26,9 @@
 
     <scm>
         <url>http://hacloud.club</url>
-        <connection>git@git.oschina.net:keets/jersey-starter-swagger.git</connection>
-        <developerConnection>http://git.oschina.net/keets/jersey-starter-swagger</developerConnection>
+        <connection>scm:git:git@git.oschina.net:keets/jersey-starter-swagger.git</connection>
+        <developerConnection>scm:git:git@git.oschina.net:keets/jersey-starter-swagger.git</developerConnection>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
