--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>club.hacloud</groupId>
+    <groupId>com.blueskykong</groupId>
     <artifactId>jersey-starter-swagger</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0.RELEASE</version>
 
     <name>jersey-starter-swagger</name>
     <url>http://git.oschina.net/keets/jersey-starter-swagger</url>
@@ -24,18 +25,18 @@
         </license>
     </licenses>
 
-    <scm>
-        <url>http://hacloud.club</url>
-        <connection>scm:git:git@git.oschina.net:keets/jersey-starter-swagger.git</connection>
-        <developerConnection>scm:git:git@git.oschina.net:keets/jersey-starter-swagger.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
+        <scm>
+            <url>http://blueskykong.com</url>
+            <connection>scm:git:git@git.oschina.net:keets/jersey-starter-swagger.git</connection>
+            <developerConnection>scm:git:git@git.oschina.net:keets/jersey-starter-swagger.git</developerConnection>
+            <tag>HEAD</tag>
+        </scm>
 
     <developers>
         <developer>
             <name>aoho-keets</name>
             <email>keets001@gmail.com</email>
-            <organization>http://hacloud.club</organization>
+            <organization>http://blueskykong.com</organization>
         </developer>
     </developers>
 
